feat: add Java 17+ dashboard support with MXBean polling engine
Runtime version detection: Java 21+ uses JFR streaming (full features),
Java 17-20 uses MXBean polling (GC, CPU, Memory without virtual threads).
MxBeanPollingEngine polls GC/CPU MXBeans at configurable intervals and
writes to same RingBuffers as JfrStreamingEngine. Thread.ofPlatform()
replaced with standard Thread API for Java 17 compatibility. /config
endpoint now returns runtime.javaVersion and virtualThreadsSupported.
Dashboard adapts: VT sections show notice on < 21, JVM Health works on all.

Signed-off-by: rlaope <piyrw9754@gmail.com>